--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": false,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
@@ -36,6 +36,7 @@
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.15.0",
     "vite": "^4.0.0",
+    "vite-plugin-restart": "^0.3.1",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
   }
