--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
-    "element-plus": "^2.2.30",
+    "element-plus": "^2.4.4",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
+    "vue-i18n": "^9.4.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
@@ -34,7 +35,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
-    "unplugin-auto-import": "^0.15.0",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-icons": "^0.18.1",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^4.0.0",
     "vite-plugin-restart": "^0.3.1",
     "vitest": "^0.25.6",
