--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.6.2",
     "element-plus": "^2.4.4",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
@@ -32,6 +33,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
+    "mockjs": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
@@ -39,6 +41,7 @@
     "unplugin-icons": "^0.18.1",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^4.0.0",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-restart": "^0.3.1",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
