--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,9 @@
-{}
+{
+  "printWidth": 200,
+  "tabWidth": 2,
+  "semi": false,
+  "singleQuote": false,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "proseWrap": "never"
+}
