--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,14 @@
 # 环境
 NODE_ENV = development
 
+VITE_BASE_URL = "/"
+
 # 网站标题
 VITE_APP_TITLE = "测试"
+
+VITE_DEFAULT_LOCALE=zh-CN
+VITE_FALLBACK_LOCALE=en
+VITE_SUPPORTED_LOCALES=zh-CN,en
 
 # api接口
 VITE_BASE_API = "/api"
