--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "@intlify/unplugin-vue-i18n": "^2.0.0",
     "axios": "^1.6.2",
     "element-plus": "^2.4.4",
     "pinia": "^2.0.28",
