--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -4,7 +4,7 @@
     "vite.config.*",
     "vitest.config.*",
     "cypress.config.*",
-    "playwright.config.*",
+    "playwright.config.*"
   ],
   "compilerOptions": {
     "composite": true,
