--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ coverage
 
 /cypress/videos/
 /cypress/screenshots/
-/src/types/auto-*.d.ts
+src/types/auto-*.d.ts
 
 # Editor directories and files
 .idea
